<package>

  <name> astar_planner </name>
  <version>0.0.0</version>
  <description>     astar_planner  </description>

  <maintainer email="kanzhi@todo.todo">liyang</maintainer>
  <license>TODO</license>

   <buildtool_depend>catkin</buildtool_depend>

 <build_depend>boost</build_depend>
 <build_depend>libopencv-dev</build_depend>

 <build_depend> roscpp </build_depend>
 <build_depend> roslib </build_depend>
 <build_depend> rospy </build_depend>
 <build_depend> nav_msgs</build_depend>
 <build_depend> tf </build_depend>

 <run_depend>boost</run_depend>
 <run_depend> roscpp </run_depend>
 <run_depend> roslib </run_depend>
 <run_depend> rospy </run_depend>
 <run_depend> nav_msgs</run_depend>
 <run_depend> tf </run_depend>
 <run_depend>libopencv-dev</run_depend>

</package>


